# cfr-in-trading

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  config_example.toml
io/: config.toml
py/: .gitignore  Makefile  plugin.h  plugin.py
py/src/: __init__.py  main.py  utils.py
py/src/dev/: output_to_pretty_table.py
py/src/dev/dataset_prep/: t.py
src/: config.rs  inferrer.rs  iteration.rs  lib.rs  play.rs  pyemb.rs
src/backtest/: backtester.rs  instrument_id.rs  instrument_spec.rs  mod.rs  order.rs  position.rs  profit.rs  strategy.rs
src/datasets/: mod.rs  nq_f1_f2_f4.rs
src/dtypes/: bar.rs  mod.rs  point.rs  price.rs  sample.rs  utility.rs
src/model/: mod.rs  model.rs  model_id.rs  model_set.rs  model_type.rs  random_model.rs  working_model.rs
src/strategies/: basic.rs  mod.rs
src/train/: inferrer.rs  iteration.rs  iteration_stat.rs  mod.rs  play.rs
src/utils/: mod.rs  path_utils.rs  regret.rs
