[package]
name = "cfr-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
atomic_float = "0.1.0"
clap = { version = "4.4.18", features = ["derive"] }
ndarray = "0.15.6"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
toml = "0.8.8"
